[gd_scene load_steps=4 format=3 uid="uid://dxlb0m1k7l1nu"]

[ext_resource type="Script" uid="uid://bb4ek2q10snke" path="res://Other/bullet.gd" id="1_w7kte"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_kyxkv"]
size = Vector2(8, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_v1a47"]
radius = 4.0

[node name="Bullet" type="Area2D"]
scale = Vector2(1.5, 1.5)
collision_layer = 0
collision_mask = 3
script = ExtResource("1_w7kte")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_kyxkv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v1a47")

[node name="ExpiryTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ExpiryTimer" to="." method="_on_expiry_timer_timeout"]
